# webserv

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  cgi_executer.get.sh  tester42.sh  webserv.yaml
.github/workflows/: webserv-test.yml
42_tester_dir/: .gitignore  tester.yaml
headers/: EnvManager.hpp  Logger.hpp  classDefUtils.hpp  constants.hpp  macros.hpp  types.hpp  utils.hpp
headers/cgi/: CgiExecuter.hpp  CgiExecuterService.hpp  CgiHandler.hpp  CgiHandlerService.hpp  CgiResponse.hpp  CgiResponseMode.hpp
headers/config/: CgiConfig.hpp  HttpRedirectConfig.hpp  HttpRouteConfig.hpp  IHttpRedirectConfig.hpp  IHttpRouteConfig.hpp  IListenConfig.hpp  IServerConfig.hpp  ListenConfig.hpp  ServerConfig.hpp  ServerRunningConfig.hpp  parseCgiConfig.hpp  parseHttpRedirectConfig.hpp  parseHttpRouteConfig.hpp  parseListenConfig.hpp  parseServerConfig.hpp  validateConfig.hpp
headers/http/: HttpFieldMap.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpVersion.hpp  MessageBody.hpp
headers/math/: math.hpp
headers/poll/: Poll.hpp  PollEventResult.hpp  Pollable.hpp
headers/service/: CgiService.hpp  DeleteFileService.hpp  FileService.hpp  GetFileService.hpp  PostFileService.hpp  RequestedFileInfo.hpp  ServiceBase.hpp  ServiceEventResult.hpp  SimpleService.hpp  getRequestedFilePath.hpp  pickService.hpp
headers/signal/: signal_handler.hpp
headers/socket/: ClientSocket.hpp  Poll.hpp  ServerSocket.hpp  SockEventResult.hpp  Socket.hpp  TimeoutChecker.hpp
headers/utils/: ErrorPageProvider.hpp  (+16 more)
srcs/: main.cpp
test-ci/: http-test.py
tests/: leaks.cpp
(+99 files in other folders)
